--- a/SwampAttack/Resources/image/skull_shield.plist
+++ b/SwampAttack/Resources/image/skull_shield.plist
@@ -186,6 +186,19 @@
                 <key>sourceSize</key>
                 <string>{180,180}</string>
             </dict>
+            <key>skull_shield_defense.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{364,738},{78,116}}</string>
+                <key>offset</key>
+                <string>{28,-22}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{79,54},{78,116}}</string>
+                <key>sourceSize</key>
+                <string>{180,180}</string>
+            </dict>
             <key>skull_shield_down0001.png</key>
             <dict>
                 <key>frame</key>
@@ -449,11 +462,11 @@
             <key>skull_shield_hurt_heavy0007.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{276,902},{92,112}}</string>
+                <string>{{730,650},{92,112}}</string>
                 <key>offset</key>
                 <string>{6,-24}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{50,58},{92,112}}</string>
                 <key>sourceSize</key>
@@ -462,7 +475,7 @@
             <key>skull_shield_hurt_heavy0008.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{608,750},{96,106}}</string>
+                <string>{{730,744},{96,106}}</string>
                 <key>offset</key>
                 <string>{-4,-27}</string>
                 <key>rotated</key>
@@ -475,7 +488,7 @@
             <key>skull_shield_hurt_heavy0009.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{730,650},{106,102}}</string>
+                <string>{{844,678},{106,102}}</string>
                 <key>offset</key>
                 <string>{-9,-29}</string>
                 <key>rotated</key>
@@ -488,11 +501,11 @@
             <key>skull_shield_hurt_heavy0010.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{242,798},{102,112}}</string>
+                <string>{{178,902},{102,112}}</string>
                 <key>offset</key>
                 <string>{-5,-26}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{34,60},{102,112}}</string>
                 <key>sourceSize</key>
@@ -605,7 +618,7 @@
             <key>skull_shield_hurt_on0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{178,902},{96,112}}</string>
+                <string>{{282,902},{96,112}}</string>
                 <key>offset</key>
                 <string>{9,-25}</string>
                 <key>rotated</key>
@@ -618,7 +631,7 @@
             <key>skull_shield_hurt_on0004.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{364,738},{102,112}}</string>
+                <string>{{242,798},{102,112}}</string>
                 <key>offset</key>
                 <string>{-6,-26}</string>
                 <key>rotated</key>
@@ -833,7 +846,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:2eaf8bc7f3542bc897283e196d25010e:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:9557b7d602c683da3302f419b3d7c67f:1/1$</string>
             <key>textureFileName</key>
             <string>skull_shield.png</string>
         </dict>
