--- a/SwampAttack/Resources/image/yinying.plist
+++ b/SwampAttack/Resources/image/yinying.plist
@@ -7,7 +7,7 @@
             <key>yy_Muroidea.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{373,404},{74,83}}</string>
+                <string>{{453,459},{74,83}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +20,7 @@
             <key>yy_Muroidea_armor.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,474},{78,83}}</string>
+                <string>{{368,397},{78,83}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
@@ -33,7 +33,7 @@
             <key>yy_Muroidea_armor_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{89,458},{78,83}}</string>
+                <string>{{462,379},{78,83}}</string>
                 <key>offset</key>
                 <string>{0,1}</string>
                 <key>rotated</key>
@@ -46,7 +46,7 @@
             <key>yy_Muroidea_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{461,379},{74,83}}</string>
+                <string>{{547,414},{74,83}}</string>
                 <key>offset</key>
                 <string>{-1,-1}</string>
                 <key>rotated</key>
@@ -59,7 +59,7 @@
             <key>yy_Pumpkin.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{374,335},{67,85}}</string>
+                <string>{{2,420},{67,85}}</string>
                 <key>offset</key>
                 <string>{-11,0}</string>
                 <key>rotated</key>
@@ -72,7 +72,7 @@
             <key>yy_Pumpkin_armor.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{546,414},{63,82}}</string>
+                <string>{{717,478},{63,82}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,11 +85,11 @@
             <key>yy_Pumpkin_armor_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{308,395},{63,82}}</string>
+                <string>{{538,490},{63,82}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{63,82}}</string>
                 <key>sourceSize</key>
@@ -98,7 +98,7 @@
             <key>yy_Pumpkin_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{221,366},{67,85}}</string>
+                <string>{{111,390},{67,85}}</string>
                 <key>offset</key>
                 <string>{-11,0}</string>
                 <key>rotated</key>
@@ -120,6 +120,32 @@
                 <string>{{7,4},{93,58}}</string>
                 <key>sourceSize</key>
                 <string>{105,66}</string>
+            </dict>
+            <key>yy_bat_armor.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{315,304},{88,54}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{88,54}}</string>
+                <key>sourceSize</key>
+                <string>{88,54}</string>
+            </dict>
+            <key>yy_bat_armor_light.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{221,304},{92,57}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{92,57}}</string>
+                <key>sourceSize</key>
+                <string>{92,57}</string>
             </dict>
             <key>yy_bat_light.png</key>
             <dict>
@@ -163,7 +189,7 @@
             <key>yy_blind.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{867,374},{72,79}}</string>
+                <string>{{786,559},{72,79}}</string>
                 <key>offset</key>
                 <string>{0,-2}</string>
                 <key>rotated</key>
@@ -176,7 +202,7 @@
             <key>yy_blind_armor.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,608},{78,79}}</string>
+                <string>{{943,449},{78,79}}</string>
                 <key>offset</key>
                 <string>{0,2}</string>
                 <key>rotated</key>
@@ -189,7 +215,7 @@
             <key>yy_blind_armor_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{948,374},{74,77}}</string>
+                <string>{{948,596},{74,77}}</string>
                 <key>offset</key>
                 <string>{0,4}</string>
                 <key>rotated</key>
@@ -202,11 +228,11 @@
             <key>yy_blind_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{935,453},{68,73}}</string>
+                <string>{{952,374},{68,73}}</string>
                 <key>offset</key>
                 <string>{0,1}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{7,9},{68,73}}</string>
                 <key>sourceSize</key>
@@ -345,7 +371,7 @@
             <key>yy_scarecrow.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{854,448},{60,79}}</string>
+                <string>{{285,477},{60,79}}</string>
                 <key>offset</key>
                 <string>{0,1}</string>
                 <key>rotated</key>
@@ -384,7 +410,7 @@
             <key>yy_scarecrow_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{773,418},{60,79}}</string>
+                <string>{{867,596},{60,79}}</string>
                 <key>offset</key>
                 <string>{-7,1}</string>
                 <key>rotated</key>
@@ -423,7 +449,7 @@
             <key>yy_skull.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{111,390},{66,85}}</string>
+                <string>{{198,425},{66,85}}</string>
                 <key>offset</key>
                 <string>{-3,1}</string>
                 <key>rotated</key>
@@ -436,7 +462,7 @@
             <key>yy_skull_a.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{87,592},{65,80}}</string>
+                <string>{{883,529},{65,80}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -449,7 +475,7 @@
             <key>yy_skull_a_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{172,549},{65,80}}</string>
+                <string>{{704,543},{65,80}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -462,11 +488,11 @@
             <key>yy_skull_armor.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{312,304},{60,89}}</string>
+                <string>{{371,335},{60,89}}</string>
                 <key>offset</key>
                 <string>{-2,1}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{7,3},{60,89}}</string>
                 <key>sourceSize</key>
@@ -475,7 +501,7 @@
             <key>yy_skull_armor_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{221,304},{60,89}}</string>
+                <string>{{221,363},{60,89}}</string>
                 <key>offset</key>
                 <string>{0,1}</string>
                 <key>rotated</key>
@@ -488,7 +514,7 @@
             <key>yy_skull_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{285,479},{62,83}}</string>
+                <string>{{867,374},{62,83}}</string>
                 <key>offset</key>
                 <string>{-3,-2}</string>
                 <key>rotated</key>
@@ -501,7 +527,7 @@
             <key>yy_skull_shield.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{259,543},{65,80}}</string>
+                <string>{{801,492},{65,80}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -514,7 +540,7 @@
             <key>yy_skull_shield_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{370,480},{65,80}}</string>
+                <string>{{622,525},{65,80}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -631,7 +657,7 @@
             <key>yy_vampire.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,554},{52,83}}</string>
+                <string>{{632,471},{52,83}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -644,7 +670,7 @@
             <key>yy_vampire_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{87,538},{52,83}}</string>
+                <string>{{858,438},{52,83}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -787,7 +813,7 @@
             <key>yy_zombie.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{174,489},{58,83}}</string>
+                <string>{{773,418},{58,83}}</string>
                 <key>offset</key>
                 <string>{-1,0}</string>
                 <key>rotated</key>
@@ -800,7 +826,7 @@
             <key>yy_zombie_armor.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{198,435},{52,85}}</string>
+                <string>{{2,489},{52,85}}</string>
                 <key>offset</key>
                 <string>{1,0}</string>
                 <key>rotated</key>
@@ -813,7 +839,7 @@
             <key>yy_zombie_armor_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,420},{52,85}}</string>
+                <string>{{89,459},{52,85}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -826,11 +852,11 @@
             <key>yy_zombie_light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{458,455},{54,81}}</string>
+                <string>{{312,394},{54,81}}</string>
                 <key>offset</key>
                 <string>{3,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{17,6},{54,81}}</string>
                 <key>sourceSize</key>
@@ -872,7 +898,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:5f4b4454518a0c20c5ef1267ed780ebb:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:5779b99d0ec9dd212483574a61407573:1/1$</string>
             <key>textureFileName</key>
             <string>yinying.png</string>
         </dict>
